--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,10 @@
 spring.application.name=Student-App
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/student_tracker
-spring.datasource.username=postgres
-spring.datasource.password=admin123
 
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO}
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-spring.security.user.name=admin
-spring.security.user.password=1234
