--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,14 @@
 server.port=${PORT:8080}
 spring.application.name=Student-App
+spring.datasource.url=jdbc:postgresql://dpg-d4oskaadbo4c73fs9h9g-a.virginia-postgres.render.com:5432/student_tracker_en05?sslmode=require
+spring.datasource.username=student_tracker_en05_user
+spring.datasource.password=9B8hl79ODRAPIFbgXmzueBWN9PkNyvej
 
-
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-
-spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO}
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
