--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,12 @@
             <optional>true</optional>
         </dependency>
 
+        <!-- Spring Boot Starter Mail -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
         <!-- Spring Boot Test Starter (includes JUnit 5) -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
